--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@progress/kendo-data-query": "^1.5.4",
+    "@progress/kendo-licensing": "^1.1.4",
+    "@progress/kendo-react-animation": "^4.5.0",
+    "@progress/kendo-react-dateinputs": "^4.5.0",
+    "@progress/kendo-react-dropdowns": "^4.5.0",
+    "@progress/kendo-react-intl": "^4.5.0",
+    "@progress/kendo-react-treeview": "^4.5.0",
+    "@progress/kendo-theme-default": "^4.38.1",
+    "@reduxjs/toolkit": "^1.5.1",
+    "@syncfusion/ej2-react-dropdowns": "^19.1.58",
+    "@syncfusion/ej2-react-grids": "^19.1.57",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
@@ -10,20 +21,29 @@
     "@types/node": "^12.20.6",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "axios": "^0.21.1",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.6.0",
+    "formik": "^2.2.7",
     "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-dropdown-hook": "^1.0.1",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.0",
+    "react-slick": "^0.28.1",
+    "redux": "^4.1.0",
     "sass": "^1.32.11",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.3",
     "typescript": "^4.2.3",
+    "use-between": "0.0.18",
     "web-vitals": "^1.1.1",
     "yarn": "^1.22.10"
   },
