--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "@progress/kendo-data-query": "^1.5.4",
     "@progress/kendo-licensing": "^1.1.4",
     "@progress/kendo-react-animation": "^4.5.0",
@@ -29,12 +30,14 @@
     "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
+    "react-datepicker": "^4.1.0",
     "react-dom": "^17.0.1",
     "react-dropdown-hook": "^1.0.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.0",
+    "react-select-currency": "^1.0.7",
     "react-slick": "^0.28.1",
     "redux": "^4.1.0",
     "sass": "^1.32.11",
@@ -45,7 +48,8 @@
     "typescript": "^4.2.3",
     "use-between": "0.0.18",
     "web-vitals": "^1.1.1",
-    "yarn": "^1.22.10"
+    "yarn": "^1.22.10",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "BROWSER='google chrome' react-scripts start",
